--- a/pricing.html
+++ b/pricing.html
@@ -453,7 +453,7 @@
         </nav>
         <div class="right-actions">
             <div class="credit-icon">0.0 $</div>
-            <div class="notification-icon">🔔</div>
+            <a href="notification.html" class="notification-icon" style="text-decoration: none;">🔔</a>
             <div class="account-container">
                 <div class="account-icon">👤</div>
                 <div class="account-dropdown">
@@ -473,9 +473,7 @@
             <p>Connecting knowledge, stepping firmly into the future</p>
             <a href="#pricing" class="hero-button">Enroll Now ➜</a>
         </div>
-        <div class="hero-image">
-            <img src="/api/placeholder/400/300" alt="EduConnect illustration" style="max-width: 100%;">
-        </div>
+
     </section>
 
     <section id="pricing" class="pricing-section">
