--- a/match.html
+++ b/match.html
@@ -6,7 +6,6 @@
     <title>EduConnect - Matching Tutor</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
-        /* ... (KEEP ALL YOUR EXISTING CSS STYLES) ... */
          :root {
             /* ... (keep existing variables) ... */
             --primary-color: #0d1472;
@@ -130,7 +129,7 @@
             width: var(--card-width); overflow: hidden; display: flex;
             flex-direction: column; position: relative; z-index: 1;
             opacity: 0; transform: translateY(30px) scale(0.9);
-            transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+            transition: opacity 0.6s ease-out, transform 0.6s ease-out, height 0.3s ease-out; /* ADDED: height transition */
             pointer-events: none;
         }
         .tutor-card.visible { opacity: 1; transform: translateY(0) scale(1); pointer-events: auto; }
@@ -143,9 +142,9 @@
         }
         .tutor-image { width: 100%; height: var(--card-image-height); overflow: hidden; background-color: #eee; }
         .tutor-image img { display: block; width: 100%; height: 100%; object-fit: cover; }
-        .tutor-info { padding: 20px 15px; text-align: center; }
+        .tutor-info { padding: 20px 15px; text-align: center; flex-grow: 1; /* ADDED: Allows info to grow */ }
         .tutor-name { font-size: 1.15em; font-weight: 600; color: var(--text-color); margin: 0 0 15px 0; }
-        .tutor-buttons { display: flex; gap: 10px; justify-content: center; }
+        .tutor-buttons { display: flex; gap: 10px; justify-content: center; margin-bottom: 15px; /* ADDED: space before details */ }
         .tutor-seemore-btn, .tutor-message-btn {
             display: inline-block; padding: 8px 20px; border-radius: 50px;
             font-weight: 600; font-size: 0.9em; text-decoration: none; cursor: pointer;
@@ -155,6 +154,45 @@
         .tutor-seemore-btn:hover { background-color: var(--button-color); color: var(--button-text-color); }
         .tutor-message-btn { border: 2px solid #28a745; color: #28a745; background-color: transparent; }
         .tutor-message-btn:hover { background-color: #28a745; color: white; }
+
+        /* --- ADDED: Styles for Tutor Details --- */
+        .tutor-details {
+        font-size: 0.85em;
+        color: var(--light-text);
+        margin-top: 10px;
+        padding: 10px;
+        background-color: #f9f9f9; /* Light background for contrast */
+        border-radius: 6px;
+        border: 1px solid #eee;
+        text-align: left;
+        max-height: 0; /* Start hidden */
+        opacity: 0;
+        overflow: hidden; /* Important: Keep hidden initially and during transition */
+        transition: max-height 0.4s ease-out, opacity 0.3s ease-out 0.1s, padding 0.4s ease-out, margin-top 0.4s ease-out; /* Smooth transition */
+    }
+
+    /* --- MODIFIED THIS RULE --- */
+        .tutor-card.details-visible .tutor-details {
+            /* You can adjust this max-height value as needed */
+            max-height: 150px; /* Set a maximum height before scrolling starts */
+            opacity: 1;
+            padding: 10px; /* Restore padding */
+            margin-top: 10px; /* Restore margin */
+            overflow-y: auto;  /* ADDED: Show vertical scrollbar ONLY if content overflows max-height */
+            /* Optional: Add a little right padding to prevent text touching the scrollbar */
+            padding-right: 15px;
+        }
+        /* --- END MODIFIED RULE --- */
+
+        .tutor-details p {
+            margin-bottom: 5px;
+            line-height: 1.4;
+        }
+        .tutor-details strong {
+            color: var(--text-color);
+            margin-right: 5px;
+        }
+        /* --- END ADDED --- */
 
         .final-status-box {
             position: absolute; top: 40px; left: 50%;
@@ -236,6 +274,8 @@
              .final-status-box { font-size: 1em; top: 25px; padding: 8px 20px; }
              .tutor-buttons { flex-direction: column; gap: 8px; }
              .tutor-label { font-size: 0.8em; padding: 3px 10px; }
+             /* ADDED: Adjust detail font size */
+             .tutor-details { font-size: 0.8em; }
 
              footer { flex-direction: column; gap: 2rem; padding: 2rem 1rem; text-align: center; }
              .footer-logo, .footer-links, .footer-socials { width: 100%; max-width: none; }
@@ -259,6 +299,8 @@
                  transform: translateY(20px) scale(0.9);
              }
              .match-container { min-height: auto; max-width: 95%; } /* Allow shrink */
+             .tutor-buttons { flex-direction: row; gap: 10px; justify-content: center; } /* Revert button stacking for single card view */
+
          }
     </style>
 </head>
@@ -317,7 +359,10 @@
                     </div>
                     <div class="tutor-info">
                         <h3 class="tutor-name">Lê Nguyễn Thanh Bình</h3>
-                        <a href="#" class="tutor-seemore-btn">See more</a>
+                        <div class="tutor-buttons">
+                            <a href="#" class="tutor-seemore-btn">See more</a>
+                            <!-- Note: Student card doesn't have a message button or details area -->
+                        </div>
                     </div>
                 </div>
                 <!-- Teacher cards will be added here by JavaScript -->
@@ -396,10 +441,10 @@
             const placeholderImage = `images/${teacher.name}.png`; // Default image if teacher.image is missing
             const teacherName = teacher.name || 'Unnamed Teacher';
             const teacherId = teacher.teacher_id || 'unknown_id';
-            const teacherEmail = teacher.email || ''; // Get email or default to empty string
-            const teacherReason = teacher.reason || '';
+            const teacherEmail = teacher.email || 'N/A'; // Get email or use placeholder
+            const teacherReason = teacher.reason || 'No reason provided.'; // Get reason or use placeholder
 
-            // **MODIFIED**: Added data-teacher-id and data-teacher-email
+            // MODIFIED: Added data attributes AND the hidden details div
             return `
                 <div class="tutor-card"
                     data-teacher-id="${teacherId}"
@@ -414,6 +459,11 @@
                         <div class="tutor-buttons">
                             <a href="#" class="tutor-seemore-btn">See more</a>
                             <a href="chat.html" class="tutor-message-btn">Send message</a>
+                        </div>
+                        <!-- ADDED: Hidden details area -->
+                        <div class="tutor-details">
+                            <p><strong>Email:</strong> ${teacherEmail}</p>
+                            <p><strong>Reason:</strong> ${teacherReason}</p>
                         </div>
                     </div>
                 </div>
@@ -433,49 +483,34 @@
                 });
 
                 if (!response.ok) {
-                    // Try to get error details from response body if possible
                     let errorBody = 'No details available';
-                    try {
-                        errorBody = await response.text(); // or response.json() if API returns JSON error
-                    } catch (parseError) { /* Ignore parse error */ }
+                    try { errorBody = await response.text(); } catch (parseError) { /* Ignore */ }
                     throw new Error(`API Error: ${response.status} ${response.statusText}. Body: ${errorBody}`);
                 }
 
-                const result = await response.json(); // Assuming your API returns JSON on success
+                const result = await response.json();
                 console.log('API Success:', result);
-                // Optional: Show a success message to the user
-                // showTemporaryStatus('Teacher data sent successfully!', false);
                 return true; // Indicate success
 
             } catch (error) {
                 console.error('Error sending teacher data to API:', error);
-                // Optional: Show an error message to the user
                 showTemporaryStatus('Error contacting server. Please try again.', true);
                 return false; // Indicate failure
             }
         }
 
         // --- Function to show a temporary status message ---
-        // (Helper for API feedback, reuses finalStatusBox)
         function showTemporaryStatus(message, isError = false) {
             if (!finalStatusBox) return;
             finalStatusBox.textContent = message;
             finalStatusBox.classList.remove('error', 'success', 'visible', 'hidden'); // Reset classes
-            if (isError) {
-                finalStatusBox.classList.add('error');
-            } else {
-                // Optional: Add a 'success' class if you want different styling
-                // finalStatusBox.classList.add('success'); // Assuming you have CSS for .success
-            }
+            finalStatusBox.classList.toggle('error', isError); // Simpler way to add/remove error class
             finalStatusBox.classList.add('visible');
 
-            // Hide after a delay
             setTimeout(() => {
                 finalStatusBox.classList.remove('visible');
                 finalStatusBox.classList.add('hidden');
-                // Optional: Reset text after hiding
-                // setTimeout(() => { finalStatusBox.textContent = ''; }, 400); // Delay matching transition
-            }, statusHideDelay); // Reuse existing delay or use a new one
+            }, statusHideDelay);
         }
 
 
@@ -488,25 +523,28 @@
                 calculatedStatusAppearDelay += statusAppearDelayOffset;
             }
 
-            // 1. Hide spinner
+            // 1. Hide spinner & Show Tutor Area
             setTimeout(() => {
                 if (loadingSpinner) loadingSpinner.classList.add('hidden');
-
                 if (matchesFound && tutorArea) {
                     tutorArea.classList.add('visible');
                     const cards = tutorArea.querySelectorAll('.tutor-card');
-                    cards.forEach((card, index) => {
-                        // Skip animating the static student card (if desired, or adjust logic)
-                        if (card.id === 'tutor1') return;
+                    let teacherCardIndex = 0; // Separate index for teacher cards animation stagger
+                    cards.forEach((card) => {
+                         // Make student card visible immediately with the area fade-in
+                        if (card.id === 'tutor1') {
+                             card.classList.add('visible');
+                             return; // Skip stagger delay for student card
+                        }
+                        // Apply stagger delay only to teacher cards
                         setTimeout(() => {
                             card.classList.add('visible');
-                        }, (index -1) * cardStaggerDelay); // Adjust index if skipping student card
+                        }, teacherCardIndex * cardStaggerDelay);
+                        teacherCardIndex++; // Increment only for teacher cards
                     });
-                    // Make sure the student card is visible immediately or with the area
-                    const studentCard = document.getElementById('tutor1');
-                    if (studentCard) studentCard.classList.add('visible');
                 }
             }, tutorAppearDelay);
+
 
             // 2. Show final status box (related to finding matches)
             setTimeout(() => {
@@ -519,17 +557,9 @@
                 }
             }, calculatedStatusAppearDelay);
 
-            // Optional cleanup listeners (kept from original code)
-            if (finalStatusBox) {
-                finalStatusBox.addEventListener('transitionend', (event) => {
-                    // ... (keep existing logic if needed)
-                });
-            }
-            if(loadingSpinner) {
-                loadingSpinner.addEventListener('transitionend', (event) => {
-                   // ... (keep existing logic if needed)
-                });
-            }
+            // Optional cleanup listeners (can be removed if not strictly needed)
+            // if (finalStatusBox) { ... }
+            // if (loadingSpinner) { ... }
         }
 
         // --- Function to handle the fetched teacher data ---
@@ -543,7 +573,6 @@
                 // Clear previous teacher cards (if any, keeping the student card)
                  const existingTeacherCards = tutorArea.querySelectorAll('.tutor-card:not(#tutor1)');
                  existingTeacherCards.forEach(card => card.remove());
-
 
                 // Create and append new cards
                 teachersToShow.forEach(teacher => {
@@ -567,55 +596,62 @@
             startAnimationSequence(false);
         }
 
-        // --- **NEW**: Event Listener for "Send message" button clicks ---
+        // --- MODIFIED: Event Listener for ALL button clicks within tutorArea ---
         if (tutorArea) {
             tutorArea.addEventListener('click', async (event) => {
-                // Check if the clicked element is a message button or inside one
-                const messageButton = event.target.closest('.tutor-message-btn');
+                 // Find the closest button element that was clicked or contains the clicked element
+                const button = event.target.closest('a.tutor-seemore-btn, a.tutor-message-btn');
 
-                if (messageButton) {
-                    event.preventDefault(); // Prevent navigating to chat.html immediately
+                // If no button was clicked, do nothing
+                if (!button) return;
 
-                    const card = messageButton.closest('.tutor-card');
-                    if (card) {
-                        const teacherId = card.dataset.teacherId;
-                        const teacherEmail = card.dataset.teacherEmail;
-                        const teacherReason = card.dataset.teacherReason; // <-- ADDED: Retrieve reason
-                        const teacherNameElement = card.querySelector('.tutor-name');
-                        const teacherName = teacherNameElement ? teacherNameElement.textContent : 'Unknown Name';
+                // Prevent default anchor link behavior for both button types
+                event.preventDefault();
 
-                        // Prepare data for API
-                        const dataToSend = {
-                            teacher_id: teacherId,
-                            name: teacherName, // Changed key to match Python convention
-                            email: teacherEmail, // Changed key to match Python convention
-                            reason: teacherReason // <-- ADDED: Include reason in the payload
-                        };
+                const card = button.closest('.tutor-card');
+                if (!card) return; // Should not happen if button is inside a card
 
-                        console.log('Sending data to API:', dataToSend); // Now includes reason
+                // --- Handle "See More" button ---
+                if (button.classList.contains('tutor-seemore-btn')) {
+                     // Toggle the visibility class on the parent card
+                     card.classList.toggle('details-visible');
+                }
+                // --- Handle "Send Message" button ---
+                else if (button.classList.contains('tutor-message-btn')) {
+                    const teacherId = card.dataset.teacherId;
+                    const teacherEmail = card.dataset.teacherEmail;
+                    const teacherReason = card.dataset.teacherReason;
+                    const teacherNameElement = card.querySelector('.tutor-name');
+                    const teacherName = teacherNameElement ? teacherNameElement.textContent : 'Unknown Name';
 
-                        // Disable button temporarily to prevent multiple clicks
-                        messageButton.style.pointerEvents = 'none';
-                        messageButton.style.opacity = '0.7';
+                    // Prepare data for API
+                    const dataToSend = {
+                        teacher_id: teacherId,
+                        name: teacherName,
+                        email: teacherEmail,
+                        reason: teacherReason
+                    };
 
-                        // Call the API function
-                        const success = await sendTeacherDataToAPI(dataToSend);
+                    console.log('Sending data to API:', dataToSend);
 
-                        // Re-enable button after API call finishes
-                        messageButton.style.pointerEvents = 'auto';
-                        messageButton.style.opacity = '1';
+                    // Disable button temporarily
+                    button.style.pointerEvents = 'none';
+                    button.style.opacity = '0.7';
 
-                        // If API call was successful, navigate to chat page
-                        if (success) {
-                             console.log("API call successful, navigating to chat...");
-                             // Optionally add a small delay before navigation if needed
-                             // setTimeout(() => {
-                                  window.location.href = messageButton.href; // Navigate to chat.html
-                             // }, 300);
-                        } else {
-                            console.log("API call failed, staying on page.");
-                            // Error message is shown by showTemporaryStatus inside sendTeacherDataToAPI
-                        }
+                    // Call the API
+                    const success = await sendTeacherDataToAPI(dataToSend);
+
+                    // Re-enable button
+                    button.style.pointerEvents = 'auto';
+                    button.style.opacity = '1';
+
+                    // Navigate if successful
+                    if (success) {
+                         console.log("API call successful, navigating to chat...");
+                         window.location.href = button.href; // Navigate to chat.html
+                    } else {
+                        console.log("API call failed, staying on page.");
+                        // Error message shown by showTemporaryStatus
                     }
                 }
             });
@@ -632,7 +668,19 @@
                 return response.json();
             })
             .then(data => {
-                handleTeacherData(data);
+                // Make sure data is an array before processing
+                if (Array.isArray(data)) {
+                    handleTeacherData(data);
+                } else {
+                    // Handle cases where the JSON might be nested, e.g., { "teachers": [...] }
+                    // Adjust this based on your actual JSON structure if needed
+                    if (data && Array.isArray(data.teachers)) {
+                         handleTeacherData(data.teachers);
+                    } else {
+                        console.error('Fetched data is not an array or expected structure:', data);
+                        handleNoMatch('Lỗi định dạng dữ liệu gia sư.');
+                    }
+                }
             })
             .catch(error => {
                 console.error('Error fetching or parsing suitable_teacher.json:', error);
