--- a/frontend/chat.html
+++ b/frontend/chat.html
@@ -5,271 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat - EduConnectGPT</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <style>
-        :root {
-            --primary-color: #0d1472;
-            --secondary-color: #f0f4ff;
-            --accent-color: #3c4fe0;
-            --text-color: #333;
-            --light-text: #888;
-            --white: #fff;
-            --border-color: #e5e7eb;
-            --sidebar-bg: #f8f9fa;
-            --chat-bg: #ffffff;
-            --message-sent-bg: #d1e7ff; /* Updated sent message color */
-            --message-received-bg: #f8f9fa;
-            --header-height: 65px;
-        }
-        * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
-
-        /* ----- Body Layout ----- */
-        body {
-            background-color: var(--secondary-color);
-            color: var(--text-color);
-        }
-
-        /* ----- Header Styles ----- */
-        header {
-            background-color: white;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 0 2rem;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-            position: sticky;
-            top: 0;
-            left: 0;
-            width: 100%;
-            z-index: 100;
-            height: var(--header-height);
-        }
-        header .logo img { height: 40px; display: block; }
-        header nav ul { display: flex; list-style: none; }
-        header nav ul li { margin: 0 1rem; }
-        header nav ul li a { text-decoration: none; color: var(--text-color); font-weight: 500; padding: 0.5rem 0; display: block; position: relative; }
-        header nav ul li a.active { color: var(--accent-color); font-weight: 600; }
-
-        .animated-underline::after { content: ''; position: absolute; width: 0; height: 2px; bottom: -2px; left: 0; background-color: var(--accent-color); transition: width 0.3s ease-in-out; }
-        .animated-underline:hover::after { width: 100%; }
-        header nav ul li a.active.animated-underline::after { width: 100%; }
-
-        header .right-actions { display: flex; align-items: center; gap: 1rem; }
-
-        header .credit-icon { background-color: #f5f5f5; padding: 0.3rem 0.7rem; border-radius: 4px; font-size: 0.9rem; }
-        header .notification-icon, header .account-icon { font-size: 1.2rem; color: var(--text-color); cursor: pointer; }
-        header .account-container { position: relative; cursor: pointer; }
-        header .account-dropdown { display: none; position: absolute; top: calc(100% + 0.5rem); right: 0; background-color: var(--white); min-width: 160px; box-shadow: 0 8px 16px rgba(0,0,0,0.1); border-radius: 8px; padding: 0.5rem 0; z-index: 1000; animation: fadeIn 0.3s ease; }
-        header .account-container:hover .account-dropdown { display: block; }
-        header .dropdown-item { padding: 0.8rem 1.5rem; display: block; color: var(--text-color); text-decoration: none; transition: background-color 0.2s ease; font-size: 0.95rem; }
-        header .dropdown-item:hover { background-color: var(--secondary-color); color: var(--accent-color); }
-        header .dropdown-divider { height: 1px; background-color: #eee; margin: 0.3rem 0; }
-
-        @keyframes fadeIn { from {opacity: 0; transform: translateY(-10px);} to {opacity: 1; transform: translateY(0);} }
-
-        /* ----- Wrapper Layout ----- */
-        .chat-page-wrapper {
-            display: flex;
-            height: calc(100vh - var(--header-height));
-        }
-
-        /* ----- Sidebar Styles ----- */
-        .sidebar {
-            width: 260px;
-            background-color: var(--sidebar-bg);
-            border-right: 1px solid var(--border-color);
-            display: flex;
-            flex-direction: column;
-            padding: 1.5rem 0;
-            height: 100%;
-            flex-shrink: 0;
-        }
-        .sidebar-header { padding: 0 1.5rem 1.5rem 1.5rem; display: flex; align-items: center; border-bottom: 1px solid var(--border-color); margin-bottom: 1rem; }
-        .sidebar-logo img { height: 35px; margin-right: 10px; }
-        .sidebar-user { font-weight: 600; font-size: 1.1rem; color: var(--primary-color); white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
-        .sidebar-search { padding: 0 1.5rem; margin-bottom: 1rem; position: relative; }
-        .sidebar-search input { width: 100%; padding: 0.5rem 0.8rem 0.5rem 2.2rem; border: 1px solid var(--border-color); border-radius: 6px; font-size: 0.9rem; }
-        .sidebar-search .fa-search { position: absolute; left: 2.2rem; top: 50%; transform: translateY(-50%); color: var(--light-text); font-size: 0.9rem; }
-        .sidebar-nav { flex-grow: 1; overflow-y: auto; }
-        .nav-category { padding: 0.5rem 1.5rem; font-size: 0.8rem; font-weight: 600; color: var(--light-text); text-transform: uppercase; margin-top: 1rem; }
-        .nav-item { display: flex; align-items: center; padding: 0.7rem 1.5rem; color: var(--text-color); text-decoration: none; font-size: 0.95rem; transition: background-color 0.2s ease, color 0.2s ease; border-left: 3px solid transparent; }
-        .nav-item:hover { background-color: var(--secondary-color); color: var(--accent-color); }
-        .nav-item.active { background-color: var(--secondary-color); color: var(--accent-color); font-weight: 500; border-left: 3px solid var(--accent-color); }
-        .nav-item i { margin-right: 0.8rem; width: 20px; text-align: center; color: var(--light-text); }
-        .nav-item.active i { color: var(--accent-color); }
-
-        /* ----- Main Content Area ----- */
-        .main-content {
-            flex-grow: 1;
-            display: flex;
-            flex-direction: column;
-            height: 100%;
-            background-color: var(--chat-bg);
-            overflow: hidden;
-        }
-
-        /* ----- Chat Header (trong Main) ----- */
-        .chat-header {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            padding: 1rem 1.5rem;
-            border-bottom: 1px solid var(--border-color);
-            background-color: var(--white);
-            flex-shrink: 0;
-        }
-        .recipient-info { display: flex; align-items: center; }
-        .recipient-avatar img { width: 45px; height: 45px; border-radius: 50%; object-fit: cover; margin-right: 1rem; }
-        .recipient-name { font-size: 1.2rem; font-weight: 600; }
-        .recipient-id { font-size: 0.8rem; color: var(--light-text); }
-        .chat-actions { display: flex; align-items: center; gap: 1rem; }
-        .chat-actions button, .chat-actions i { background: none; border: none; color: var(--light-text); font-size: 1.2rem; cursor: pointer; transition: color 0.2s ease; }
-        .chat-actions button:hover, .chat-actions i:hover { color: var(--accent-color); }
-        .chat-actions .send-request-btn { background-color: var(--accent-color); color: var(--white); padding: 0.5rem 1rem; border-radius: 5px; font-size: 0.9rem; font-weight: 500; }
-
-        /* ----- Messages Area ----- */
-        .messages-area {
-            flex-grow: 1;
-            overflow-y: auto;
-            padding: 1.5rem;
-            background-color: var(--secondary-color); /* Slightly different background */
-            display: flex;
-            flex-direction: column;
-        }
-        .message-bubble { max-width: 70%; padding: 0.8rem 1rem; border-radius: 15px; margin-bottom: 1rem; line-height: 1.4; position: relative; font-size: 0.95rem; word-wrap: break-word; box-shadow: 0 1px 2px rgba(0,0,0,0.05); }
-        .message-sent { background-color: var(--accent-color); color: var(--white); align-self: flex-end; border-bottom-right-radius: 5px; }
-        .message-received { background-color: var(--white); color: var(--text-color); align-self: flex-start; border: 1px solid var(--border-color); border-bottom-left-radius: 5px; }
-        .message-timestamp { font-size: 0.75rem; color: var(--light-text); display: block; margin-top: 5px; text-align: right; }
-        .message-sent .message-timestamp { color: rgba(255, 255, 255, 0.7); }
-
-        /* ----- Message Input Area ----- */
-        .message-input-area {
-            display: flex;
-            align-items: center;
-            padding: 1rem 1.5rem;
-            border-top: 1px solid var(--border-color);
-            background-color: var(--white);
-            flex-shrink: 0;
-        }
-        .message-input { flex-grow: 1; padding: 0.8rem 1rem; border: 1px solid var(--border-color); border-radius: 20px; margin-right: 1rem; font-size: 0.95rem; outline: none; transition: border-color 0.2s, box-shadow 0.2s; }
-        .message-input:focus { border-color: var(--accent-color); box-shadow: 0 0 0 2px rgba(60, 79, 224, 0.2); }
-        .send-button { background-color: var(--accent-color); border: none; color: var(--white); width: 40px; height: 40px; border-radius: 50%; font-size: 1.2rem; cursor: pointer; display: flex; align-items: center; justify-content: center; transition: background-color 0.2s ease; flex-shrink: 0; }
-        .send-button:hover { background-color: #2a3bb0; }
-        .attach-button, .emoji-button { background: none; border: none; color: var(--light-text); font-size: 1.3rem; margin-right: 0.8rem; cursor: pointer; flex-shrink: 0; }
-
-        /* ----- Modal for Study Time Selection ----- */
-        .modal-overlay {
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background-color: rgba(0, 0, 0, 0.5);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            z-index: 1000;
-            opacity: 0;
-            visibility: hidden;
-            transition: opacity 0.3s ease, visibility 0.3s ease;
-        }
-        .modal-overlay.active {
-            opacity: 1;
-            visibility: visible;
-        }
-        .modal-content {
-            background-color: white;
-            border-radius: 8px;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-            width: 90%;
-            max-width: 500px;
-            padding: 2rem;
-            transform: translateY(-20px);
-            transition: transform 0.3s ease;
-        }
-        .modal-overlay.active .modal-content {
-            transform: translateY(0);
-        }
-        .modal-header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 1.5rem;
-        }
-        .modal-title {
-            font-size: 1.5rem;
-            font-weight: 600;
-            color: var(--primary-color);
-        }
-        .modal-close {
-            background: none;
-            border: none;
-            font-size: 1.5rem;
-            cursor: pointer;
-            color: var(--light-text);
-        }
-        .modal-body {
-            margin-bottom: 1.5rem;
-        }
-        .day-selection {
-            margin-bottom: 1.5rem;
-        }
-        .day-title {
-            font-weight: 600;
-            margin-bottom: 0.8rem;
-            color: var(--primary-color);
-        }
-        .time-options {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 10px;
-            margin-bottom: 1rem;
-        }
-        .time-option {
-            background-color: var(--secondary-color);
-            border: 2px solid transparent;
-            border-radius: 6px;
-            padding: 0.6rem 1rem;
-            cursor: pointer;
-            font-size: 0.9rem;
-            transition: all 0.2s ease;
-        }
-        .time-option:hover {
-            background-color: #e0e7ff;
-        }
-        .time-option.selected {
-            border-color: var(--accent-color);
-            background-color: rgba(60, 79, 224, 0.1);
-            font-weight: 500;
-        }
-        .modal-footer {
-            display: flex;
-            justify-content: flex-end;
-            gap: 1rem;
-        }
-        .btn {
-            padding: 0.7rem 1.5rem;
-            border-radius: 5px;
-            font-size: 0.95rem;
-            cursor: pointer;
-            transition: all 0.2s ease;
-            border: none;
-        }
-        .btn-cancel {
-            background-color: #f1f1f1;
-            color: var(--text-color);
-        }
-        .btn-cancel:hover {
-            background-color: #e1e1e1;
-        }
-        .btn-join {
-            background-color: var(--accent-color);
-            color: white;
-            font-weight: 500;
-        }
-        .btn-join:hover {
-            background-color: #2a3bb0;
-        }
-    </style>
+    <link rel="stylesheet" href="frontend/css/chat.css">
 </head>
 <body>
     <!-- ===== HEADER ===== -->
