--- a/frontend/chat.html
+++ b/frontend/chat.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat - EduConnectGPT</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="frontend/css/chat.css">
+    <link rel="stylesheet" href="css/chat.css">
 </head>
 <body>
     <!-- ===== HEADER ===== -->
