--- a/frontend/schedule.html
+++ b/frontend/schedule.html
@@ -5,319 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EduConnect - Schedule</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <style>
-        /* === CSS Gốc từ Trang Chủ === */
-        :root {
-            --primary-color: #0d1472;
-            --secondary-color: #f0f4ff;
-            --accent-color: #3c4fe0;
-            --text-color: #333;
-            --light-text: #888;
-            --white: #fff;
-            --purple-gradient: linear-gradient(135deg, #1a0049 0%, #3c4fe0 100%);
-            /* === CSS Cho Lịch === */
-            --grid-border-color: #e9e9e9;
-            --day-number-color: #a0a0a0;
-            --weekday-header-color: #333;
-            --month-header-color: #000;
-            --event-text-color: #ffffff;
-            --event-green: #27ae60;
-            --event-blue: #2980b9;
-            --event-gray: #7f8c8d;
-            --event-purple: #8e44ad;
-            --event-orange: #f39c12;
-            --time-axis-width: 60px;
-            --time-label-color: #777;
-            /* --- Define Row Height Consistently --- */
-            --calendar-row-min-height: 140px;
-            /* --- Calculate Top Offset --- */
-            /* Approximation: Header(padding-top + font-size + padding-bottom) + Weekdays(padding-top + font-size + padding-bottom + border-bottom) */
-            /* Adjust font-size multipliers if base font-size differs significantly */
-            --header-approx-height: calc(20px + 1.8em + 20px);
-            --weekdays-approx-height: calc(10px + 0.9em + 10px + 1px);
-            --total-top-offset: calc(var(--header-approx-height) + var(--weekdays-approx-height));
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
-
-        body {
-             background-color: var(--white);
-             padding: 0;
-        }
-
-        /* Header Styles */
-        header {
-            background-color: white;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 1rem 2rem;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-            position: sticky;
-            top: 0;
-            z-index: 100;
-            /* Assuming header height around 60-70px for sticky calculations */
-            height: 70px; /* Example explicit height */
-        }
-        .logo img { height: 40px; }
-        nav ul { display: flex; list-style: none; }
-        nav ul li { margin: 0 10px; }
-        nav ul li a { text-decoration: none; padding: 8px 12px; color: #555; font-weight: 500; position: relative; transition: color 0.3s; }
-        nav ul li a.active { color: #4361ee; font-weight: 600; }
-        .animated-underline { position: relative; text-decoration: none; }
-        .animated-underline::after { content: ''; position: absolute; width: 0; height: 2px; bottom: 0; left: 0; background-color: #1e40af; transition: width 0.3s ease-in-out; }
-        .animated-underline:hover::after { width: 100%; }
-        .right-actions { display: flex; align-items: center; gap: 20px; }
-        .credit-icon, .notification-icon { font-size: 1rem; cursor: pointer; }
-        .account-container { position: relative; cursor: pointer; }
-        .account-icon { font-size: 1.2rem; }
-        .account-dropdown { position: absolute; top: 100%; right: 0; background: white; border-radius: 8px; box-shadow: 0 5px 15px rgba(0,0,0,0.1); width: 150px; display: none; padding: 8px 0; }
-        .account-container:hover .account-dropdown { display: block; }
-        .dropdown-item { display: block; padding: 8px 15px; text-decoration: none; color: #333; transition: background 0.2s; }
-        .dropdown-item:hover { background: #f5f5f5; color: #4361ee; }
-        .dropdown-divider { height: 1px; background: #eee; margin: 5px 0; }
-
-
-        /* === Calendar Layout === */
-        .calendar-outer-wrapper {
-             padding: 40px 20px;
-             background-color: #f8f9fa;
-        }
-
-        .schedule-layout {
-            display: flex;
-            max-width: calc(1100px + var(--time-axis-width) + 10px);
-            margin: 0 auto;
-            gap: 10px;
-            align-items: flex-start;
-        }
-
-        .time-axis {
-            width: var(--time-axis-width);
-            /* --- Use calculated top offset --- */
-            padding-top: var(--total-top-offset);
-            padding-right: 10px;
-            text-align: right;
-            flex-shrink: 0;
-            position: sticky;
-            /* Adjust top based on actual sticky header height + outer wrapper padding */
-            top: calc(70px + 40px); /* Header height + outer wrapper padding */
-            align-self: stretch;
-            /* border-right: 1px solid var(--grid-border-color); */
-        }
-
-        .time-label {
-            font-size: 0.8em;
-            color: var(--time-label-color);
-            /* --- Explicitly set height to match grid row min-height --- */
-            height: var(--calendar-row-min-height);
-            line-height: 1.2; /* Keep line height reasonable */
-            display: flex; /* Use flex to align text within the box */
-            align-items: flex-start; /* Align text to the top */
-            justify-content: flex-end; /* Keep text right-aligned */
-            padding-top: 5px; /* Small padding from the top border */
-            border-top: 1px solid #f0f0f0; /* Add faint top border */
-            box-sizing: border-box; /* Include border/padding in height */
-        }
-        /* Remove border from the very first label */
-        .time-label:first-child {
-            border-top: none;
-        }
-
-        .calendar-container {
-            flex-grow: 1;
-            border: 1px solid var(--grid-border-color);
-            background-color: #fff;
-            border-radius: 8px;
-            overflow: hidden;
-            max-width: 1100px;
-        }
-
-        .calendar-header {
-            font-size: 1.8em;
-            font-weight: 600;
-            color: var(--month-header-color);
-            padding: 20px 25px;
-            text-align: left;
-            /* border-bottom: 1px solid var(--grid-border-color); */ /* Optional: keep or remove */
-        }
-
-        .calendar-weekdays {
-            display: grid;
-            grid-template-columns: repeat(7, 1fr);
-            text-align: center;
-            padding: 10px 0;
-            font-weight: 600;
-            color: var(--weekday-header-color);
-            border-bottom: 1px solid var(--grid-border-color);
-            font-size: 0.9em;
-        }
-
-        .calendar-grid {
-            display: grid;
-            grid-template-columns: repeat(7, 1fr);
-            /* --- Use variable for row height --- */
-            grid-auto-rows: minmax(var(--calendar-row-min-height), auto);
-            border-top: none;
-            position: relative;
-        }
-
-        .calendar-day {
-            border-right: 1px dotted var(--grid-border-color);
-            border-bottom: 1px dotted var(--grid-border-color);
-            padding: 5px 8px;
-            position: relative;
-            overflow: hidden;
-            display: flex;
-            justify-content: flex-end;
-            align-items: flex-start;
-        }
-        .calendar-day:nth-child(7n) { border-right: none; }
-        /* Assuming 5 weeks for July 2025 */
-         .calendar-day:nth-child(n+29):nth-child(-n+35) {
-             border-bottom: none;
-         }
-
-        .day-number {
-            font-size: 0.8em;
-            color: var(--day-number-color);
-            font-weight: 500;
-             padding: 2px 4px;
-        }
-        .other-month .day-number { opacity: 0.5; }
-
-        /* Event Styling */
-        .calendar-event {
-            position: absolute;
-            color: var(--event-text-color);
-            border-radius: 6px;
-            padding: 8px 10px;
-            font-size: 0.85em;
-            font-weight: 500;
-            overflow: hidden;
-            box-sizing: border-box;
-            z-index: 1;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            line-height: 1.3;
-            background-image: url('data:image/svg+xml,%3Csvg width="6" height="6" viewBox="0 0 6 6" xmlns="http://www.w3.org/2000/svg"%3E%3Cg fill="%23ffffff" fill-opacity="0.1" fill-rule="evenodd"%3E%3Cpath d="M5 0h1L0 6V5zM6 5v1H5z"/%3E%3C/g%3E%3C/svg%3E');
-            /* Positioning within the day cell */
-            top: 28px; /* Below day number */
-            left: 4px;
-            right: 4px;
-            bottom: 4px;
-            height: auto; /* Let content determine height within bounds */
-            min-height: 60px; /* Ensure minimum space */
-            /* width: calc(100% - 8px); Don't restrict width */
-        }
-         .calendar-event i { margin-bottom: 4px; font-size: 1.1em; }
-        .event-green { background-color: var(--event-green); }
-        .event-blue { background-color: var(--event-blue); }
-        .event-gray { background-color: var(--event-gray); }
-        .event-purple { background-color: var(--event-purple); }
-        .event-orange { background-color: var(--event-orange); }
-
-        .event-time {
-            display: block;
-            font-size: 0.9em;
-            margin-top: 3px;
-            opacity: 0.9;
-        }
-
-        /* Event Positioning (Grid Area - Relative to calendar-grid) */
-        #event-thao-math { grid-area: 3 / 2 / 4 / 2; } /* Box 15 */
-        #event-thao-english { grid-area: 3 / 4 / 4 / 4; } /* Box 17 */
-        #event-thao-physics { grid-area: 5 / 2 / 6 / 3; }
-
-
-        /* Footer Styles */
-        footer {
-            background: #0a1172;
-            color: white;
-            padding: 2rem 5rem;
-            display: flex;
-            justify-content: space-between;
-            margin-top: 0;
-        }
-         .footer-logo { width: 20%; }
-         .footer-logo img { max-width: 80px; }
-         .footer-tagline { font-size: 0.9rem; margin-top: 1rem; line-height: 1.5; }
-         .footer-links { display: flex; gap: 3rem; }
-         .footer-links h3 { font-size: 1rem; margin-bottom: 1rem; }
-         .footer-links ul { list-style: none; }
-         .footer-links li { margin-bottom: 0.5rem; }
-         .footer-links a { text-decoration: none; color: #ccc; font-size: 0.9rem; transition: color 0.3s; }
-         .footer-links a:hover { color: white; }
-         .footer-socials h3 { font-size: 1rem; margin-bottom: 1rem; color: var(--white); }
-        .social-icons-list { display: flex; flex-wrap: wrap; gap: 12px; }
-        .social-icon-item { display: inline-block; width: 30px; height: 30px; line-height: 0; transition: transform 0.2s ease; }
-        .social-icon-item:hover { transform: scale(1.1); }
-        .social-icon-item img { width: 100%; height: 100%; object-fit: contain; display: block; }
-
-
-        /* Responsive */
-         @media (max-width: 768px) {
-             header { flex-direction: column; gap: 1rem; padding: 1rem; height: auto; /* Adjust height for column layout */ }
-             nav ul { flex-wrap: wrap; justify-content: center; }
-             .right-actions { margin-top: 1rem; }
-
-             .calendar-outer-wrapper { padding: 20px 10px; }
-             .schedule-layout { flex-direction: column; gap: 15px; max-width: 100%; }
-
-             .time-axis {
-                 width: 100%;
-                 padding-top: 0; /* Reset padding */
-                 text-align: center;
-                 display: flex;
-                 flex-wrap: wrap;
-                 justify-content: center;
-                 gap: 10px;
-                 position: static; /* Remove sticky */
-                 border-right: none;
-                 padding-right: 0;
-                 padding-bottom: 10px;
-                 border-bottom: 1px solid var(--grid-border-color);
-                 align-self: auto; /* Reset */
-             }
-             .time-label {
-                 height: auto; /* Auto height for horizontal layout */
-                 width: auto;
-                 padding: 2px 5px;
-                 border: 1px solid #eee;
-                 border-radius: 4px;
-                 font-size: 0.75em;
-                 /* Reset flex alignment */
-                 display: inline-block; /* Simpler display */
-                 line-height: normal;
-                 border-top: 1px solid #eee !important; /* Override non-first border */
-             }
-             .time-label:first-child {
-                 border-top: 1px solid #eee !important; /* Ensure first has border too */
-             }
-
-
-             .calendar-container { max-width: 100%; }
-             .calendar-header { font-size: 1.5em; padding: 15px; }
-             .calendar-weekdays { font-size: 0.8em; }
-             .calendar-grid { grid-auto-rows: minmax(120px, auto); } /* Adjust mobile row height if needed */
-             .calendar-event { font-size: 0.75em; padding: 5px; min-height: 50px; }
-             .day-number { font-size: 0.7em; }
-             .event-time { font-size: 0.85em; }
-
-             footer { flex-direction: column; gap: 2rem; padding: 2rem 1rem; text-align: center; }
-             .footer-logo, .footer-links, .footer-socials { width: 100%; max-width: none; }
-             .footer-socials { justify-content: center; }
-         }
-
-    </style>
+    <link rel="stylesheet" href="css/schedule.css">
 </head>
 <body>
     <header>
