--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -4,692 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EduConnect - User Profile</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
-
-        body {
-            background-color: #f0f2f5;
-        }
-
-        /* Header Styles */
-        header {
-            background-color: white;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 0.8rem 2rem;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-            position: sticky;
-            top: 0;
-            z-index: 100;
-        }
-
-        .logo img {
-            height: 40px;
-        }
-
-        nav ul {
-            display: flex;
-            list-style: none;
-        }
-
-        nav ul li {
-            margin: 0 10px;
-        }
-
-        nav ul li a {
-            text-decoration: none;
-            padding: 8px 12px;
-            color: #555;
-            font-weight: 500;
-            position: relative;
-            transition: color 0.3s;
-        }
-
-        nav ul li a.active {
-            color: #4361ee;
-            font-weight: 600;
-        }
-
-        .animated-underline {
-        position: relative;
-        text-decoration: none;
-        }
-
-        .animated-underline::after {
-        content: '';
-        position: absolute;
-        width: 0;
-        height: 2px;
-        bottom: 0;
-        left: 0;
-        background-color: #1e40af; /* Blue color for the underline */
-        transition: width 0.3s ease-in-out;
-        }
-
-        .animated-underline:hover::after {
-        width: 100%;
-        }
-        .search-container {
-            position: relative;
-            margin-top: 1rem;
-            max-width: 600px;
-            margin-left: auto;
-            margin-right: auto;
-        }
-
-        .right-actions {
-            display: flex;
-            align-items: center;
-            gap: 20px;
-        }
-
-        .credit-icon, .notification-icon {
-            font-size: 1rem;
-            cursor: pointer;
-        }
-
-        .notification-icon {
-            position: relative;
-        }
-
-        .notification-badge {
-            position: absolute;
-            top: -8px;
-            right: -8px;
-            background-color: #ff4d4f;
-            color: white;
-            border-radius: 50%;
-            width: 18px;
-            height: 18px;
-            font-size: 0.7rem;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .account-container {
-            position: relative;
-            cursor: pointer;
-        }
-
-        .account-icon {
-            font-size: 1.2rem;
-        }
-
-        .account-dropdown {
-            position: absolute;
-            top: 100%;
-            right: 0;
-            background: white;
-            border-radius: 8px;
-            box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-            width: 150px;
-            display: none;
-            padding: 8px 0;
-            z-index: 10;
-        }
-
-        .account-container:hover .account-dropdown {
-            display: block;
-        }
-
-        .dropdown-item {
-            display: block;
-            padding: 8px 15px;
-            text-decoration: none;
-            color: #333;
-            transition: background 0.2s;
-        }
-
-        .dropdown-item:hover {
-            background: #f5f5f5;
-            color: #4361ee;
-        }
-
-        .dropdown-divider {
-            height: 1px;
-            background: #eee;
-            margin: 5px 0;
-        }
-
-        /* Main Content */
-        .main-content {
-            max-width: 1200px;
-            margin: 2rem auto;
-            padding: 0 1rem;
-        }
-
-        /* Profile Header */
-        .profile-header {
-            background: linear-gradient(135deg, #1a0049 0%, #3c4fe0 100%);
-            border-radius: 10px;
-            padding: 2rem;
-            display: flex;
-            align-items: center;
-            gap: 2rem;
-            color: white;
-            margin-bottom: 2rem;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-        }
-
-        .profile-avatar {
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
-            background-color: #fff;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 4rem;
-            border: 5px solid rgba(255,255,255,0.3);
-        }
-
-        .profile-info {
-            flex: 1;
-        }
-
-        .profile-name {
-            font-size: 2rem;
-            font-weight: 600;
-            margin-bottom: 0.5rem;
-        }
-
-        .profile-title {
-            font-size: 1.2rem;
-            opacity: 0.8;
-            margin-bottom: 1rem;
-        }
-
-        .profile-stats {
-            display: flex;
-            gap: 2rem;
-            margin-top: 1rem;
-        }
-
-        .stat-item {
-            text-align: center;
-        }
-
-        .stat-value {
-            font-size: 1.5rem;
-            font-weight: 600;
-            margin-bottom: 0.2rem;
-        }
-
-        .stat-label {
-            font-size: 0.9rem;
-            opacity: 0.8;
-        }
-
-        .edit-profile-btn {
-            background: rgba(255,255,255,0.2);
-            color: white;
-            border: none;
-            padding: 0.5rem 1.5rem;
-            border-radius: 5px;
-            font-weight: 500;
-            cursor: pointer;
-            transition: all 0.3s;
-            display: flex;
-            align-items: center;
-            gap: 0.5rem;
-            margin-left: auto;
-        }
-
-        .edit-profile-btn:hover {
-            background: rgba(255,255,255,0.3);
-        }
-
-        /* Profile Content */
-        .profile-container {
-            display: flex;
-            gap: 2rem;
-        }
-
-        .profile-sidebar {
-            width: 30%;
-        }
-
-        .profile-content {
-            width: 70%;
-        }
-
-        .sidebar-card, .content-card {
-            background: white;
-            border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.05);
-            padding: 1.5rem;
-            margin-bottom: 1.5rem;
-        }
-
-        .sidebar-title, .content-title {
-            font-size: 1.2rem;
-            font-weight: 600;
-            margin-bottom: 1.2rem;
-            color: #333;
-            display: flex;
-            align-items: center;
-            gap: 0.5rem;
-        }
-
-        .about-text {
-            color: #555;
-            line-height: 1.6;
-            margin-bottom: 1rem;
-        }
-
-        .profile-details {
-            margin-top: 1.5rem;
-        }
-
-        .detail-item {
-            display: flex;
-            margin-bottom: 1rem;
-            align-items: center;
-        }
-
-        .detail-label {
-            width: 120px;
-            color: #777;
-            font-size: 0.9rem;
-        }
-
-        .detail-value {
-            flex: 1;
-            color: #333;
-        }
-
-        .tag-list {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 0.5rem;
-            margin-top: 0.5rem;
-        }
-
-        .tag-item {
-            background: #f0f2f5;
-            color: #4361ee;
-            padding: 0.3rem 0.8rem;
-            border-radius: 20px;
-            font-size: 0.9rem;
-            font-weight: 500;
-        }
-
-        /* Skills Section */
-        .skills-list {
-            display: flex;
-            flex-direction: column;
-            gap: 1rem;
-        }
-
-        .skill-item {
-            display: flex;
-            flex-direction: column;
-            gap: 0.5rem;
-        }
-
-        .skill-header {
-            display: flex;
-            justify-content: space-between;
-        }
-
-        .skill-name {
-            font-weight: 500;
-            color: #333;
-        }
-
-        .skill-level {
-            color: #777;
-            font-size: 0.9rem;
-        }
-
-        .skill-bar {
-            height: 6px;
-            background: #eee;
-            border-radius: 3px;
-            overflow: hidden;
-        }
-
-        .skill-progress {
-            height: 100%;
-            background: #4361ee;
-            border-radius: 3px;
-        }
-
-        /* Activity Section */
-        .activity-list {
-            display: flex;
-            flex-direction: column;
-            gap: 1.2rem;
-        }
-
-        .activity-item {
-            display: flex;
-            gap: 1rem;
-            padding-bottom: 1.2rem;
-            border-bottom: 1px solid #eee;
-        }
-
-        .activity-item:last-child {
-            border-bottom: none;
-            padding-bottom: 0;
-        }
-
-        .activity-icon {
-            width: 40px;
-            height: 40px;
-            background: #eef1ff;
-            color: #4361ee;
-            border-radius: 8px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 1.2rem;
-        }
-
-        .activity-content {
-            flex: 1;
-        }
-
-        .activity-title {
-            font-weight: 500;
-            margin-bottom: 0.3rem;
-            color: #333;
-        }
-
-        .activity-description {
-            color: #555;
-            font-size: 0.9rem;
-            margin-bottom: 0.5rem;
-        }
-
-        .activity-time {
-            color: #777;
-            font-size: 0.8rem;
-        }
-
-        /* Courses Section */
-        .courses-list {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            gap: 1.2rem;
-        }
-
-        .course-card {
-            background: #f7f8fc;
-            border-radius: 8px;
-            overflow: hidden;
-            transition: transform 0.3s;
-        }
-
-        .course-card:hover {
-            transform: translateY(-5px);
-        }
-
-        .course-image {
-            height: 120px;
-            background: #ddd;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: #777;
-            font-size: 2rem;
-        }
-
-        .course-info {
-            padding: 1rem;
-        }
-
-        .course-title {
-            font-weight: 600;
-            margin-bottom: 0.5rem;
-            color: #333;
-        }
-
-        .course-instructor {
-            font-size: 0.9rem;
-            color: #777;
-            margin-bottom: 0.8rem;
-        }
-
-        .course-progress-container {
-            background: #eee;
-            height: 6px;
-            border-radius: 3px;
-            margin-bottom: 0.5rem;
-        }
-
-        .course-progress {
-            height: 100%;
-            background: #4361ee;
-            border-radius: 3px;
-        }
-
-        .course-stats {
-            display: flex;
-            justify-content: space-between;
-            font-size: 0.8rem;
-            color: #777;
-        }
-
-        /* Certificates Section */
-        .certificates-list {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            gap: 1.2rem;
-        }
-
-        .certificate-card {
-            background: #fff;
-            border: 1px solid #eee;
-            border-radius: 8px;
-            padding: 1rem;
-            display: flex;
-            flex-direction: column;
-            gap: 0.8rem;
-            transition: all 0.3s;
-        }
-
-        .certificate-card:hover {
-            box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-        }
-
-        .certificate-header {
-            display: flex;
-            align-items: center;
-            gap: 0.8rem;
-        }
-
-        .certificate-icon {
-            font-size: 1.5rem;
-            color: #4361ee;
-        }
-
-        .certificate-title {
-            font-weight: 600;
-            color: #333;
-        }
-
-        .certificate-details {
-            display: flex;
-            flex-direction: column;
-            gap: 0.3rem;
-            color: #555;
-            font-size: 0.9rem;
-        }
-
-        .certificate-actions {
-            display: flex;
-            gap: 0.8rem;
-            margin-top: 0.5rem;
-        }
-
-        .certificate-btn {
-            padding: 0.5rem 1rem;
-            border-radius: 5px;
-            font-size: 0.9rem;
-            cursor: pointer;
-            transition: all 0.3s;
-            font-weight: 500;
-        }
-
-        .view-btn {
-            background: #eef1ff;
-            color: #4361ee;
-            border: none;
-        }
-
-        .view-btn:hover {
-            background: #dce3ff;
-        }
-
-        .download-btn {
-            background: transparent;
-            color: #4361ee;
-            border: 1px solid #4361ee;
-        }
-
-        .download-btn:hover {
-            background: #f7f8ff;
-        }
-
-        /* Footer */
-        footer {
-            background: linear-gradient(135deg, #0a0057 0%, #2a3990 100%);
-            color: white;
-            padding: 2rem 5rem;
-            display: flex;
-            justify-content: space-between;
-        }
-
-        .footer-logo {
-            width: 20%;
-        }
-
-        .footer-logo img {
-            max-width: 80px;
-        }
-
-        .footer-tagline {
-            font-size: 0.9rem;
-            margin-top: 1rem;
-            line-height: 1.5;
-        }
-
-        .footer-links {
-            display: flex;
-            flex-direction: column;
-            gap: 0.5rem;
-        }
-
-        .footer-links a {
-            text-decoration: none;
-            color: #ccc;
-            font-size: 0.9rem;
-            transition: color 0.3s;
-        }
-
-        .footer-links a:hover {
-            color: white;
-        }
-
-        .footer-socials h3 {
-            font-size: 1rem;
-            margin-bottom: 1rem;
-            color: var(--white); 
-        }
-
-        /* Container for the list of icons */
-        .social-icons-list {
-            display: flex;      
-            flex-wrap: wrap;     
-            gap: 12px;          
-        }
-
-        /* Styling for each icon's link container */
-        .social-icon-item {
-            display: inline-block; 
-            width: 30px;           
-            height: 30px;         
-            line-height: 0;        
-            transition: transform 0.2s ease; 
-        }
-
-        .social-icon-item:hover {
-            transform: scale(1.1); 
-        }
-
-        .social-icon-item img {
-            width: 100%;           
-            height: 100%;          
-            object-fit: contain;   
-            display: block;       
-        }
-
-        .social-icon {
-            background: rgba(255,255,255,0.2);
-            width: 25px;
-            height: 25px;
-            border-radius: 5px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 0.7rem;
-            color: white;
-        }
-
-        /* Responsive Adjustments */
-        @media (max-width: 992px) {
-            .profile-container {
-                flex-direction: column;
-            }
-
-            .profile-sidebar, .profile-content {
-                width: 100%;
-            }
-
-            .courses-list, .certificates-list {
-                grid-template-columns: 1fr;
-            }
-        }
-
-        @media (max-width: 768px) {
-            .profile-header {
-                flex-direction: column;
-                text-align: center;
-            }
-
-            .profile-stats {
-                justify-content: center;
-            }
-
-            .edit-profile-btn {
-                margin: 1rem auto 0;
-            }
-        }
-
-        .profile-avatar img {
-            width: 100%; 
-            height: 100%; 
-            object-fit: cover;
-            border-radius: 50%; 
-        }
-
-        .profile-avatar {
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
-            background-color: #eee;
-            border: 5px solid rgba(255,255,255,0.3);
-            overflow: hidden; 
-        }
-    </style>
+    <link rel="stylesheet" href="css/profile.css">
 </head>
 <body>
     <header>
